force-app/main/default/objects/Price_Option__c/Price_Option__c.object-meta.xml
<CustomObject>
    <label>Price Option</label>
    <nameField>
        <displayFormat>PO-{00000}</displayFormat>
        <label>Price Option ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>