force-app/main/default/objects/Price_Option__c/fields/BuyingListPriceActual__c.field-meta.xml
<CustomField>
    <fullName>BuyingListPriceActual__c</fullName>
    <formula>ReferencePrice__r.UnitPriceofBuying__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buying List Price (Actual)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>