force-app/main/default/objects/Price_Option__c/fields/BuyingListPriceUSD__c.field-meta.xml
<CustomField>
    <fullName>BuyingListPriceUSD__c</fullName>
    <formula>ReferencePrice__r.UnitPriceofBuyingUSD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buying List Price (USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>