force-app/main/default/objects/Price_Option__c/fields/BuyingListPriceVND__c.field-meta.xml
<CustomField>
    <fullName>BuyingListPriceVND__c</fullName>
    <formula>ReferencePrice__r.UnitPriceOfBuyingVND__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buying List Price (VND)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>