force-app/main/default/objects/Price_Option__c/fields/Com__c.field-meta.xml
<CustomField>
    <fullName>Com__c</fullName>
    <formula>ReferencePrice__r.COM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Com</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>