force-app/main/default/objects/Price_Option__c/fields/ContainerType__c.field-meta.xml
<CustomField>
    <fullName>ContainerType__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ChargeUnit__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>ContainerType</valueSetName>
    </valueSet>
</CustomField>