force-app/main/default/objects/Price_Option__c/fields/DEM__c.field-meta.xml
<CustomField>
    <fullName>DEM__c</fullName>
    <formula>ReferencePrice__r.DEM_Dest__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DEM</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>