force-app/main/default/objects/Price_Option__c/fields/DET__c.field-meta.xml
<CustomField>
    <fullName>DET__c</fullName>
    <formula>ReferencePrice__r.DET_Dest__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DET</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>