force-app/main/default/objects/Price_Option__c/fields/Inquiry__c.field-meta.xml
<CustomField>
    <fullName>Inquiry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inquiry</label>
    <referenceTo>Inquiry__c</referenceTo>
    <relationshipLabel>Price Options</relationshipLabel>
    <relationshipName>PriceOptions</relationshipName>
    <type>Lookup</type>
</CustomField>