force-app/main/default/objects/Price_Option__c/fields/InquiryLine__c.field-meta.xml
<CustomField>
    <fullName>InquiryLine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inquiry Line</label>
    <referenceTo>InquiryLine__c</referenceTo>
    <relationshipLabel>Price Options</relationshipLabel>
    <relationshipName>Price_Options</relationshipName>
    <type>Lookup</type>
</CustomField>