force-app/main/default/objects/Price_Option__c/fields/InquiryLineID_Flow__c.field-meta.xml
<CustomField>
    <fullName>InquiryLineID_Flow__c</fullName>
    <description>Use in flow only</description>
    <formula>InquiryLine__r.Name</formula>
    <label>Inquiry Line ID (Flow)</label>
    <type>Text</type>
</CustomField>