force-app/main/default/objects/Price_Option__c/fields/InquiryRoute__c.field-meta.xml
<CustomField>
    <fullName>InquiryRoute__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inquiry Route</label>
    <referenceTo>InquiryRoute__c</referenceTo>
    <relationshipLabel>Price Options</relationshipLabel>
    <relationshipName>Price_Options</relationshipName>
    <type>Lookup</type>
</CustomField>