force-app/main/default/objects/Price_Option__c/fields/PODAOA__c.field-meta.xml
<CustomField>
    <fullName>PODAOA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>P.O.D(A.O.A)</label>
    <referenceTo>PortCode__c</referenceTo>
    <relationshipLabel>Price Options (P.O.D(A.O.A))</relationshipLabel>
    <relationshipName>Price_Options1</relationshipName>
    <type>Lookup</type>
</CustomField>