force-app/main/default/objects/Price_Option__c/fields/POLAOD__c.field-meta.xml
<CustomField>
    <fullName>POLAOD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>P.O.L(A.O.D)</label>
    <referenceTo>PortCode__c</referenceTo>
    <relationshipLabel>Price Options</relationshipLabel>
    <relationshipName>Price_Options</relationshipName>
    <type>Lookup</type>
</CustomField>