force-app/main/default/objects/Price_Option__c/fields/Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Line</label>
    <referenceTo>Quoteline__c</referenceTo>
    <relationshipLabel>Price Options</relationshipLabel>
    <relationshipName>Price_Options</relationshipName>
    <type>Lookup</type>
</CustomField>