force-app/main/default/objects/Price_Option__c/fields/ReferencePrice__c.field-meta.xml
<CustomField>
    <fullName>ReferencePrice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reference Price</label>
    <referenceTo>ReferencePrice__c</referenceTo>
    <relationshipLabel>Price Options</relationshipLabel>
    <relationshipName>Price_Options</relationshipName>
    <type>Lookup</type>
</CustomField>