force-app/main/default/objects/Price_Option__c/fields/Route_Name_Flow__c.field-meta.xml
<CustomField>
    <fullName>Route_Name_Flow__c</fullName>
    <description>Use in flow</description>
    <formula>Route__r.Name</formula>
    <label>Route Name (Flow)</label>
    <type>Text</type>
</CustomField>