force-app/main/default/objects/Price_Option__c/fields/ServiceName_Flow__c.field-meta.xml
<CustomField>
    <fullName>ServiceName_Flow__c</fullName>
    <description>Use in flow only</description>
    <formula>Service__r.Name</formula>
    <label>Service Name (Flow)</label>
    <type>Text</type>
</CustomField>