force-app/main/default/objects/Price_Option__c/fields/ST__c.field-meta.xml
<CustomField>
    <fullName>ST__c</fullName>
    <formula>ReferencePrice__r.ST_Dest__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ST</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>