force-app/main/default/objects/Price_Option__c/fields/Supplier_Vendor_Flow__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Vendor_Flow__c</fullName>
    <description>Use in flow only</description>
    <formula>SupplierVendor__r.Name</formula>
    <label>Supplier/Vendor (Flow)</label>
    <type>Text</type>
</CustomField>