force-app/main/default/objects/Price_Option__c/fields/SupplierVendor__c.field-meta.xml
<CustomField>
    <fullName>SupplierVendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier/Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Price Options</relationshipLabel>
    <relationshipName>Price_Options</relationshipName>
    <type>Lookup</type>
</CustomField>