force-app/main/default/objects/Price_Option__c/fields/ValidEndDate__c.field-meta.xml
<CustomField>
    <fullName>ValidEndDate__c</fullName>
    <formula>ReferencePrice__r.Valid_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valid End Date</label>
    <type>Date</type>
</CustomField>