force-app/main/default/objects/Price_Option__c/validationRules/CannotnullComboProduct.validationRule-meta.xml
<ValidationRule>
    <fullName>CannotnullComboProduct</fullName>
    <active>false</active>
    <errorConditionFormula>AND(  ISNULL(ComboProduct__c) ,NOT(ISNULL( InquiryLine__r.ComboProduct__c )))</errorConditionFormula>
    <errorDisplayField>ComboProduct__c</errorDisplayField>
    <errorMessage>Please input Combo Product as same as Combo Product in Inquiry Line</errorMessage>
</ValidationRule>