force-app/main/default/objects/Price_Option__c/validationRules/ChargeUnit_ContainerType.validationRule-meta.xml
<ValidationRule>
    <fullName>ChargeUnit_ContainerType</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
AND(ISPICKVAL(ChargeUnit__c,&quot;Container&quot;),
    ISPICKVAL(ContainerType__c,&quot;&quot;)
   ),
AND(NOT(ISPICKVAL(ChargeUnit__c,&quot;Container&quot;)),
    NOT(ISPICKVAL(ContainerType__c,&quot;&quot;))))</errorConditionFormula>
    <errorDisplayField>ChargeUnit__c</errorDisplayField>
    <errorMessage>Container Type only has value when Charge Unit equals &quot;Container&quot;.</errorMessage>
</ValidationRule>