force-app/main/default/objects/Price_Option__c/validationRules/EqualComboProduct.validationRule-meta.xml
<ValidationRule>
    <fullName>EqualComboProduct</fullName>
    <active>false</active>
    <errorConditionFormula>InquiryLine__r.ComboProduct__r.Id  &lt;&gt;  ComboProduct__r.Id</errorConditionFormula>
    <errorDisplayField>ComboProduct__c</errorDisplayField>
    <errorMessage>Combo Product in Inquiry Line and Price Option needs to be the same</errorMessage>
</ValidationRule>