force-app/main/default/objects/Price_Option__c/validationRules/LockRecord.validationRule-meta.xml
<ValidationRule>
    <fullName>LockRecord</fullName>
    <active>false</active>
    <errorConditionFormula>AND (
      InquiryLine__r.Inquiry__r.Lock__c = TRUE ,
      NOT ( ISPICKVAL ( InquiryLine__r.Status__c , &quot;Completed&quot; ) ) ,
      NOT ( ISPICKVAL ( InquiryLine__r.Status__c , &quot;Cancelled&quot; ) )
)</errorConditionFormula>
    <errorMessage>This Inquiry is locked. Please contact to the owner/Salesman of this Inquiry. Thank you!</errorMessage>
</ValidationRule>