force-app/main/default/objects/Price_Option__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SupplierVendor__c</columns>
    <columns>InquiryLine__c</columns>
    <columns>ReferencePrice__c</columns>
    <columns>PODAOA__c</columns>
    <columns>POLAOD__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>